--- a/backend/Overprice_Model.ipynb
+++ b/backend/Overprice_Model.ipynb
@@ -35,7 +35,7 @@
           "height": 858
         },
         "id": "bHEveBh_WHeV",
-        "outputId": "7e03fcaf-dcc4-49b5-912e-71d21b4966f0"
+        "outputId": "9b429ed0-23f6-424f-c240-e0536a6372f1"
       },
       "source": [
         "import pandas as pd\n",
@@ -55,7 +55,7 @@
         "\n",
         "usable_df"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
@@ -250,7 +250,7 @@
         "              'Olympus TG-5 Waterproof Camera with 3-Inch LCD', \\\n",
         "              'Corsair Vengeance LPX 16GB (2x8GB) DDR4 DRAM 3000MHz C15 Desktop Memory Kit - Black (CMK16GX4M2B3000C15)']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
           "height": 518
         },
         "id": "kDIYvlJiY85x",
-        "outputId": "fa7dceaa-67fa-411a-bce4-7dfa0c8a0214"
+        "outputId": "04fa7168-8551-4f84-8f08-a542100e754c"
       },
       "source": [
         "test_df = pd.DataFrame(columns=['prices.amountMax', 'prices.condition', 'brand', 'name', 'overpriced'])\n",
@@ -291,7 +291,7 @@
         "test_df['prices.amountMax'] = test_df['prices.amountMax'].round(decimals=2)\n",
         "test_df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 18
         }
       ]
     },
@@ -459,7 +459,7 @@
           "height": 600
         },
         "id": "mAPT6R4yieAL",
-        "outputId": "0c5ff142-605d-479d-97ca-4aa486cde9f0"
+        "outputId": "bd7d7fc5-e3e3-4f1f-bee6-b5bb3571fd3a"
       },
       "source": [
         "test_df['prices.condition'] = \"NEW\"\n",
@@ -468,7 +468,7 @@
         "\n",
         "encoded_df"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +829,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 19
         }
       ]
     },
@@ -851,7 +851,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import xgboost as xgb"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -861,7 +861,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3gSFOGl2jl9w",
-        "outputId": "6b130c46-93a3-402c-9f7d-d92641583e69"
+        "outputId": "05ae85b5-e1ca-45b3-c2f7-ab39db859f9b"
       },
       "source": [
         "x_data = encoded_df.iloc[:, :-2]\n",
@@ -880,7 +880,7 @@
         "print(\"Accuracy on training set: {:.3f}\".format(xgb_model.score(x_train, y_train)))\n",
         "print(\"Accuracy on validation set: {:.3f}\".format(xgb_model.score(x_test, y_test)))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,20 +908,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0z7tGNhqqqU4",
-        "outputId": "2398329f-8385-4b7c-d98b-ecf887f61e05"
+        "outputId": "e7155eae-825b-4968-e3f3-30a9a4ed61e3"
       },
       "source": [
-        "from joblib import dump\n",
-        "dump(xgb_model, \"overprice.joblib.dat\")\n",
-        "print(\"Saved model to: overprice.joblib.dat\")\n",
-        "\n"
+        "xgb_model.save_model('overprice.bin')\n",
+        "print(\"Saved model to: overprice.bin\")\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Saved model to: overprice.joblib.dat\n"
+            "Saved model to: overprice.bin\n"
           ],
           "name": "stdout"
         }
